--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "docs:add": "git add .",
+    "docs:deploy": " scp -r ./docs/.vitepress/dist/ root@162.14.113.88:/home/jie/nginx/resource/project/blog/"
   },
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
     "vitepress": "^1.3.1"
   }
 }
